--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <!-- View Resume -->
       <div class="download-cv">
-        <a href="irene_resume.pdf" target="_blank">View Resume</a>
+        <a href="c:\Users\Irene Saji\portfolio\irene_saji_resume.pdf" target="_blank">View Resume</a>
       </div>
     </div>
   </header>
